--- a/RestaurantOrderingSystem/Views/Reservation/Index.cshtml
+++ b/RestaurantOrderingSystem/Views/Reservation/Index.cshtml
@@ -12,18 +12,24 @@
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ReservationTime)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.ReservationTime)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TableId)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.ReservationTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TableId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ReservationID">Edit</a> |
@@ -31,6 +37,6 @@
                 <a asp-action="Delete" asp-route-id="@item.ReservationID">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
