--- a/RestaurantOrderingSystem/Views/Reservation/Create.cshtml
+++ b/RestaurantOrderingSystem/Views/Reservation/Create.cshtml
@@ -8,18 +8,23 @@
 <h1>Create</h1>
 
 <h4>Reservation</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ReservationTime" class="control-label"></label>
-                <input asp-for="ReservationTime" class="form-control" />
+                <input asp-for="ReservationTime" class="form-control"/>
                 <span asp-validation-for="ReservationTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="TableId" class="control-label"></label>
+                <input asp-for="TableId" class="form-control"/>
+                <span asp-validation-for="TableId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -28,4 +33,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
