--- a/RestaurantOrderingSystem/Views/Reservation/Delete.cshtml
+++ b/RestaurantOrderingSystem/Views/Reservation/Delete.cshtml
@@ -10,19 +10,27 @@
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Reservation</h4>
-    <hr />
+    <hr/>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReservationTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReservationTime)
         </dd>
     </dl>
-    
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TableId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TableId)
+        </dd>
+    </dl>
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ReservationID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="hidden" asp-for="ReservationID"/>
+        <input type="submit" value="Delete" class="btn btn-danger"/> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
