--- a/RestaurantOrderingSystem/Views/Reservation/Details.cshtml
+++ b/RestaurantOrderingSystem/Views/Reservation/Details.cshtml
@@ -9,13 +9,21 @@
 
 <div>
     <h4>Reservation</h4>
-    <hr />
+    <hr/>
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReservationTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReservationTime)
+        </dd>
+    </dl>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TableId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TableId)
         </dd>
     </dl>
 </div>
